# prelegal

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  README.md  catalog.json
backend/: pyproject.toml
backend/app/: chat_schemas.py  config.py  db.py  deps.py  documents.py  documents_schemas.py  form_merge.py  llm.py  main.py  nda_merge.py  patch_models.py  schemas.py  security.py
backend/app/registry/: __init__.py  models.py  prompt.py
backend/app/routers/: auth.py  chat.py  documents.py
backend/tests/: conftest.py  test_auth.py  test_chat.py  test_documents.py  test_form_merge.py  test_nda_merge.py  test_registry.py  test_static.py
backend/tests/fixtures/static/: index.html
backend/tests/fixtures/static/documents/: index.html
backend/tests/fixtures/static/login/: index.html
frontend/: next.config.ts  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: AppShell.tsx  AuthGate.tsx  AuthHeader.tsx  BrandMark.tsx  ChatPanel.tsx  DocumentCreator.tsx  DocumentForm.tsx  DocumentPreview.tsx  Footer.tsx  LoginForm.tsx  MyDocumentsList.tsx  NdaCreator.tsx  NdaForm.tsx  NdaPreview.tsx
frontend/src/lib/: apiClient.ts  assembleDocument.ts  assembleNda.ts  authClient.ts  authContext.tsx  chatClient.ts  documentTree.ts  (+10 more)
registry/: documents.json
scripts/: extract-template-fields.mjs  smoke-test.ps1  smoke-test.sh  start-mac.sh  start-windows.ps1  stop-linux.sh  stop-windows.ps1
templates/: LICENSE.txt  ai-addendum.md  cloud-service-agreement.md  pilot-agreement.md  software-license-agreement.md
(+8 files in other folders)
